# stdint128-cmake

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  stdint128  stdint128.h
cmake/: FindInt128.cmake
